internet-check/deployment-web-metrics.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: speedtest-exporter-http
  namespace: internet-check-home
  labels:
    app: speedtest-exporter-http
spec:
  replicas: 1
  selector:
    matchLabels:
      app: speedtest-exporter-http
  template:
    metadata:
      labels:
        app: speedtest-exporter-http
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 80
          name: metrics
        volumeMounts:
        - name: shared-metrics
          mountPath: /usr/share/nginx/html
        - name: nginx-conf
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: default.conf
      volumes:
      - name: shared-metrics
        persistentVolumeClaim:
          claimName: speedtest-metrics-pvc
      - name: nginx-conf
        configMap:
          name: speedtest-nginx-config
