internet-check/speedtest-exporter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: speedtest-exporter
  namespace: monitoring
  labels:
    app.kubernetes.io/name: speedtest-exporter
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: speedtest-exporter
  template:
    metadata:
      labels:
        app.kubernetes.io/name: speedtest-exporter
        app: speedtest-exporter
    spec:
      containers:
        - name: speedtest-exporter
          image: miguelndecarvalho/speedtest-exporter:latest
          ports:
            - containerPort: 9798
              name: metrics
---
apiVersion: v1
kind: Service
metadata:
  name: speedtest-exporter
  namespace: monitoring
  labels:
    app.kubernetes.io/name: speedtest-exporter
spec:
  ports:
    - name: metrics
      port: 9798
      targetPort: 9798
      protocol: TCP
  selector:
    app.kubernetes.io/name: speedtest-exporter
  type: ClusterIP
