internet-check/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: internet-check-ingress
  namespace: internet-check-home
spec:
  ingressClassName: nginx
  rules:
  - host: internet-check.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: speedtest-tracker-service
            port:
              number: 80
